# notsureyet

./: .gitignore  LICENSE  conftest.py  hello.py  pyproject.toml  test.duckdb  test_hello.py  test_select_parameters.py
.cursor/rules/: general.mdc  writing-tests.mdc
