[project]
name = "text2api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb]>=1.8.1",
    "logfire>=3.8.1",
    "openapi-pydantic>=0.5.1",
    "requests>=2.32.3",
    "pydantic-ai==0.0.42",
    "responses>=0.25.7",
    "pyyaml>=6.0.2",
    "mirascope[openai]>=1.22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.43.2",
    "types-pyyaml>=6.0.12.20241230",
    "types-requests>=2.32.0.20250306",
]
